syntax = "proto3";

package dashboard.v1;

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/brumhard/primate/pkg/pb;dashboard";

service DashboardService {
  rpc ListPullRequests(ListPullRequestsRequest) returns (ListPullRequestsResponse) {}
  rpc StreamPullRequests(StreamPullRequestsRequest) returns (stream ListPullRequestsResponse) {}
}

message ListPullRequestsRequest {}

message StreamPullRequestsRequest {}

message ListPullRequestsResponse {
  repeated Repository items = 1;
}

message Repository {
  string name = 1;
  string url = 2;
  repeated PullRequest pullrequests = 3;
}

message PullRequest {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_DRAFT = 1;
    STATUS_ACTIVE = 2;
    STATUS_CLOSED = 3;
  }
  string title = 1;
  string url = 2;
  string user = 3;
  string source_branch = 4;
  string target_branch = 5;
  string created_at = 6;
  Status status = 7;
}
